main.tf
#------------------------------------------- 
# VPC
#------------------------------------------- 

resource "aws_vpc" "vpc" {
  lifecycle { prevent_destroy = "false" }
  cidr_block           = var.cidr
  enable_dns_hostnames = true

  tags = merge(var.tags, {
    Name = "${var.tags["Project"]}"
  })
}

#------------------------------------------- 
# Internet Gateway
#------------------------------------------- 

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = merge(var.tags, {
    Name = "${var.tags["Project"]}"
  })
}

#-------------------------------------------
# Nat Gateway
#-------------------------------------------

resource "aws_eip" "nat_gws" {
  count = var.nat_gw_count
  vpc   = true

  tags = merge(var.tags, {
    Name = "${var.tags["Project"]}"
  })

}

resource "aws_nat_gateway" "nat_gws" {
  count         = var.nat_gw_count
  allocation_id = aws_eip.nat_gws[count.index].id
  subnet_id     = aws_subnet.publicSubnets[count.index].id

  tags = merge(var.tags, {
    Name = "${var.tags["Project"]}"
  })
}

#------------------------------------------- 
# Public Subnets
#------------------------------------------- 

resource "aws_route_table" "public_route_table" {
  lifecycle {
    ignore_changes = [route]
  }
  vpc_id = aws_vpc.vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = merge(var.tags, {
    Name = "${var.tags["Project"]} - Public Route Table"
  })
}

resource "aws_subnet" "publicSubnets" {
  count = var.public_subnets_count
  lifecycle { prevent_destroy = "false" }
  vpc_id            = aws_vpc.vpc.id
  availability_zone = local.availability_zones[(count.index % var.availability_zones_count)]
  cidr_block        = local.public_subnet_list[count.index]

  tags = merge(var.tags, {
    Name = "${var.tags["Project"]} - Public Subnet 0${count.index}"
  })

}

resource "aws_route_table_association" "publicSubnets" {
  count          = var.public_subnets_count
  subnet_id      = aws_subnet.publicSubnets[count.index].id
  route_table_id = aws_route_table.public_route_table.id
}

#------------------------------------------- 
# Private Subnets
#------------------------------------------- 

resource "aws_route_table" "private_route_tables" {
  count  = var.nat_gw_count
  vpc_id = aws_vpc.vpc.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat_gws[count.index].id
  }

  tags = merge(var.tags, {
    Name = "${var.tags["Project"]} - Private Route Table 0${count.index}"
  })
}

resource "aws_subnet" "privateSubnets" {
  count = var.private_subnets_count
  lifecycle { prevent_destroy = "false" }
  vpc_id            = aws_vpc.vpc.id
  availability_zone = local.availability_zones[(count.index % var.availability_zones_count)]
  cidr_block        = local.private_subnet_list[count.index]

  tags = merge(var.tags, {
    Name = "${var.tags["Project"]} - Private Subnet 0${count.index}"
  })
}

resource "aws_route_table_association" "privateSubnets" {
  count          = var.private_subnets_count
  subnet_id      = aws_subnet.privateSubnets[count.index].id
  route_table_id = aws_route_table.private_route_tables[(count.index % var.nat_gw_count)].id
}
